# Robotics

./: README.md
2D Image Processing with ROS and OpenCV/: package.xml  setup.py
2D Image Processing with ROS and OpenCV/trsa_lab1/: camera_driver.py  image_processing.py  image_reader.py  image_rectifier.py  my_camera.py  my_filter.py
Agile Cyber-Physical Production System using MAS/CPS_SRCIM/: APDescription.txt  MTPs-Main-Container.txt
Agile Cyber-Physical Production System using MAS/CPS_SRCIM/src/Libraries/: IResource.java  ITransport.java  SimResourceLibrary.java  SimTransportLibrary.java
Agile Cyber-Physical Production System using MAS/CPS_SRCIM/src/Product/: ProductAgent.java
Agile Cyber-Physical Production System using MAS/CPS_SRCIM/src/Resource/: ResourceAgent.java
Agile Cyber-Physical Production System using MAS/CPS_SRCIM/src/Transport/: TransportAgent.java
Agile Cyber-Physical Production System using MAS/CPS_SRCIM/src/Utilities/: ConsoleFrame.java  DFInteraction.java
Agile Cyber-Physical Production System using MAS/CPS_SRCIM/src/coppelia/: BoolWA.java  FloatWA.java  IntWA.java  StringW.java
Complex Behaviors with BehaviorTree.CPP and Nav2/detection/: package.xml  setup.py
Complex Behaviors with BehaviorTree.CPP and Nav2/detection/detection/: image_detection.py
Complex Behaviors with BehaviorTree.CPP and Nav2/detection/launch/: image_detection_launch.py
Complex Behaviors with BehaviorTree.CPP and Nav2/my_bt_navigator/: CMakeLists.txt  package.xml  params.yaml
Complex Behaviors with BehaviorTree.CPP and Nav2/my_bt_navigator/behavior_trees/: bt_nav2pose.xml
Complex Behaviors with BehaviorTree.CPP and Nav2/my_bt_navigator/plugins/: detect_cone.cpp  detect_cone.hpp
Complex Behaviors with BehaviorTree.CPP and Nav2/nav2_costmap_filters/maps/: keepout_mask.yaml  speed_mask.pgm  speed_mask.yaml
Machine Learning for Energy Consumption Prediction in a Manufacturing System/: TP2.ipynb
Robot Modelling and Kinematics/tr5/tr5_kinematics/: CMakeLists.txt  package.xml
Robot Modelling and Kinematics/tr5/tr5_kinematics/src/: tr5_forward_kin_node.py  tr5_inverse_kin_node.py
Robot Modelling and Kinematics/tr5/tr5_kinematics/srv/: DoForwardKinematics.srv  DoInverseKinematics.srv
Robot Modelling and Kinematics/tr5/tr5_robot_controller/: CMakeLists.txt  package.xml
Robot Modelling and Kinematics/tr5/tr5_robot_controller/launch/: tr5_kinematics_test.launch
Robot Modelling and Kinematics/tr5/tr5_robot_controller/src/: tr5_robot_controller_node.py
Robot Modelling and Kinematics/tr5/tr5_robot_controller/srv/: KinematicMode.srv
Robot Modelling and Kinematics/tr5_description/: CMakeLists.txt  package.xml
Robot Modelling and Kinematics/tr5_description/launch/: tr5_basic_test.launch  tr5_upload_basic.launch
Robot Modelling and Kinematics/tr5_description/meshes/: TR5_Finger.dae  TR5_ForeArm.dae  TR5_UpperArm.dae  TR5_Wrist_1.dae  TR5_Wrist_2.dae
Robot Modelling and Kinematics/tr5_description/rviz/: TR5.rviz
Robot Modelling and Kinematics/tr5_description/urdf/: tr5.transmission.xacro  tr5_basic.urdf.xacro  tr5_robot_basic.urdf.xacro
Teleoperation and Mapping in ROS/navigation_goal/: package.xml  setup.cfg  setup.py
Teleoperation and Mapping in ROS/navigation_goal/launch/: goal_pose_launch.py
Teleoperation and Mapping in ROS/navigation_goal/navigation_goal/: nav_goal.py
Teleoperation and Mapping in ROS/obstacle_detection/: package.xml  setup.py
Teleoperation and Mapping in ROS/obstacle_detection/launch/: image_detection_launch.py
Teleoperation and Mapping in ROS/obstacle_detection/obstacle_detection/: can_detection.py  image_detection.py
Teleoperation and Mapping in ROS/sam_bot_description/: setup.cfg  setup.py
Teleoperation and Mapping in ROS/sam_bot_description/config/: ekf.yaml  nav2_params.yaml
Teleoperation and Mapping in ROS/sam_bot_description/launch/: display.launch.py
Teleoperation and Mapping in ROS/sam_bot_description/maps/: two_rooms_map.pgm  two_rooms_map.yaml
Teleoperation and Mapping in ROS/sam_bot_description/src/description/: sam_bot_description.urdf
