<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_bt_navigator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="trsa2024@todo.todo">trsa2024</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for runtime -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>behavior_tree_navigator</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <!-- Dependencies for testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <depend>rosidl_default_generators</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

